--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header class="header">
     <img src="./images/header-logo.svg" class = "header__logo" alt="Логотип">
     <ul class="header__lang-list">
-      <a href = "#" target="_self" class="header__lang-link header__lang-link_active">Ru</a>
-      <a href = "#" target="_self" class="header__lang-link">En</a>
+      <li><a href = "#" target="_self" class="header__lang-link header__lang-link_active">Ru</a></li>
+      <li><a href = "#" target="_self" class="header__lang-link">En</a></li>
     </ul>
   </header>
 
@@ -130,11 +130,11 @@
   <footer class="footer">
     <nav>
       <ul class="footer__links">
-        <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
-        <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
-        <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
-        <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
-        <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
+        <li><a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a></li>
       </ul>
     </nav>
       <p class="footer__copyright">© 2021. Антон Петров</p>
